@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "1.5.1"
+  VERSION = "1.5.2"
 end
