@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 1.5.2 unreleased
+
+* add 'prelaunch_signup' recipe
+
 h2. 1.5.1 June 8, 2012
 
 * update 'devise' recipe to use 'rolify 3.2.0.beta4' with Mongoid
